# OpenEnv

./: Dockerfile  README.md  app.py  grader.py  inference.py  mock_agent.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py
