[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email_triage_env"
version = "0.1.0"
description = "An OpenEnv environment for email triage tasks"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
